--- a/app6/mapapp/static/hall.html
+++ b/app6/mapapp/static/hall.html
@@ -6,14 +6,14 @@
     <title>My House</title>
     <style>
         body {
-            background-color: lightblue; /* Background color for the page */
+            background-color: rgb(26, 85, 105); /* Background color for the page */
             font-family: Arial, sans-serif; /* Sets the font style */
             margin: 0;
             padding: 0;
-            color: #333;
+            color: #611313;
         }
         header {
-            background-color: #4CAF50; /* Green header background */
+            background-color: #9aa59a; /* Green header background */
             color: white;
             padding: 20px;
             text-align: center;
