--- a/app6/mapapp/static/map.html
+++ b/app6/mapapp/static/map.html
@@ -8,7 +8,7 @@
         <font color="red"><b>Vaniyambadi</b></font>
     </h1>
     <h3 align="center">
-      <font color="blue"><b>Tharrun D (24900893)</b></font>
+      <font color="blue"><b>AJITH A (24900570)</b></font>
     </h3>
     <center>
         <img src="map.png" usemap="#MyCity">
