--- a/app6/mapapp/static/school.html
+++ b/app6/mapapp/static/school.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         header {
-            background-color: #4CAF50; /* Green header background */
+            background-color: #4c8eaf; /* Green header background */
             color: white;
             padding: 20px;
             text-align: center;
