--- a/bakku/placeapp/static/map.html
+++ b/bakku/placeapp/static/map.html
@@ -2,7 +2,7 @@
     <head>
         <title>Places in Thiruvananthapuram</title>
         <h1 align="center">Thiruvananthapuram</h1>
-        <h1 align="center">Created by: Renick Fabian Rajesh (212224230227)</h1>
+        <h1 align="center">Created by: AJITH A (212224230012)</h1>
     </head>
     <body bgcolor="silver"> 
         <img src="tvc.png" usemap="#image-map">
